{
    "name": "Cuy Controls",
    "maps": [
        {
            "name": "Player",
            "id": "07f7c2dd-d18e-487e-9a6d-1577c442fc0e",
            "actions": [
                {
                    "name": "Horizontal Move",
                    "type": "Value",
                    "id": "1c592453-b5d9-464a-9d69-1b8979e0d478",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "bb6d3d85-8dc7-4882-90d8-8505d6e759f8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Punch1",
                    "type": "Button",
                    "id": "f091fcdb-d64a-46e3-92ad-67c28a03e299",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Punch2",
                    "type": "Button",
                    "id": "1b5de107-22b7-4b28-89c3-e03837a60f43",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Kick1",
                    "type": "Button",
                    "id": "6b72cb65-ef30-47b5-9090-3602f67985ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Kick2",
                    "type": "Button",
                    "id": "aa4fc363-a1fc-4d26-89aa-471f56d96ed4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "443a1b3e-ebe7-441a-9945-6b8b5115258b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "239d9008-412b-4a8a-9a49-005b05e0d6d8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player 1",
                    "action": "Horizontal Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "1cea2860-e707-4d5c-9fdc-aaad88994b03",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player 1",
                    "action": "Horizontal Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "e0da5546-fb29-4140-a39f-828d08f03f72",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "f02b068d-db0b-4416-b0a3-7e55a10f173a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player 2",
                    "action": "Horizontal Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "f79ca0a0-8fcc-4a71-83ac-2c3d6959fd06",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player 2",
                    "action": "Horizontal Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f7e8fcf0-d5b7-4e48-b8c6-bdbe54b4aede",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player 1",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce1e9e06-aa5e-4baf-a417-4f669f11f97f",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player 2",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a970d035-c011-4c7c-a2c8-68c5a9fb7138",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player 1",
                    "action": "Punch1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2375fdeb-8338-4729-9d24-b154cacee766",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player 2",
                    "action": "Punch1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26b21b3d-bf80-4d3a-91c2-c601060cf6c9",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player 1",
                    "action": "Punch2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a256e681-c02e-448e-8ca5-dc096dbd817d",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player 2",
                    "action": "Punch2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87d7e489-6b6c-4442-90df-02e824b3a6f5",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player 1",
                    "action": "Kick1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38e7f3a6-6594-47d3-aaed-3c4eff0e7b49",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player 2",
                    "action": "Kick1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1d315ca-95e8-469d-8414-df7810b98ddb",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player 1",
                    "action": "Kick2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a63c5dec-8656-45cd-a348-70d1df8c3ed5",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player 2",
                    "action": "Kick2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Player 1",
            "bindingGroup": "Player 1",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Player 2",
            "bindingGroup": "Player 2",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}